tests/ui/issues/issue-21332.stderr
error[E0053]: method `next` has an incompatible type for trait
  --> $DIR/issue-21332.rs:5:27
   |
LL |     fn next(&mut self) -> Result<i32, i32> { Ok(7) }
   |                           ^^^^^^^^^^^^^^^^
   |                           |
   |                           expected `Option<i32>`, found `Result<i32, i32>`
   |                           help: change the output type to match the trait: `Option<i32>`
   |
   = note: expected signature `fn(&mut S) -> Option<i32>`
              found signature `fn(&mut S) -> Result<i32, i32>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0053`.
